WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120204
Tighten before/after pseudo element accessors
https://bugs.webkit.org/show_bug.cgi?id=120204
Summary
Tighten before/after pseudo element accessors
Antti Koivisto
Reported
2013-08-23 04:19:57 PDT
We have generic looking Element::pseudoElement(PseudoID) which only returns before/after pseudo elements.
Attachments
patch
(24.10 KB, patch)
2013-08-23 04:33 PDT
,
Antti Koivisto
gtk-ews
: commit-queue-
Details
Formatted Diff
Diff
another
(24.39 KB, patch)
2013-08-24 00:14 PDT
,
Antti Koivisto
kling
: review+
gtk-ews
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2013-08-23 04:33:13 PDT
Created
attachment 209448
[details]
patch
kov's GTK+ EWS bot
Comment 2
2013-08-23 05:34:33 PDT
Comment on
attachment 209448
[details]
patch
Attachment 209448
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1528576
Antti Koivisto
Comment 3
2013-08-24 00:14:10 PDT
Created
attachment 209534
[details]
another
kov's GTK+ EWS bot
Comment 4
2013-08-24 01:27:48 PDT
Comment on
attachment 209534
[details]
another
Attachment 209534
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1529786
kov's GTK+ EWS bot
Comment 5
2013-08-24 02:46:59 PDT
Comment on
attachment 209534
[details]
another
Attachment 209534
[details]
did not pass gtk-ews (gtk): Output:
http://webkit-queues.appspot.com/results/1557420
Andreas Kling
Comment 6
2013-08-24 03:51:28 PDT
Comment on
attachment 209534
[details]
another View in context:
https://bugs.webkit.org/attachment.cgi?id=209534&action=review
r=me
> Source/WebCore/dom/Element.cpp:2069 > + if (pseudoElementSpecifier != BEFORE && pseudoElementSpecifier != AFTER) > + return 0; > + return pseudoElementSpecifier == BEFORE ? host->beforePseudoElement() : host->afterPseudoElement();
This might look better as a switch.
> Source/WebCore/dom/Element.cpp:2310 > +bool Element::updateExistingPseudoElement(PseudoElement* existing, Style::Change change)
existing -> existingPseudoElement?
> Source/WebCore/dom/Element.cpp:2341 > + if (PseudoElement* existing = beforePseudoElement()) {
existing -> existingPseudoElement?
> Source/WebCore/dom/Element.cpp:2352 > + if (PseudoElement* existing = afterPseudoElement()) {
existing -> existingPseudoElement?
> Source/WebCore/dom/Element.cpp:2396 > + if (!hasRareData()) > + return;
This could be an assertion instead, if we moved the two clearFooPseudoElement() calls in clearStyleDerived... after the hasRareData check.
> Source/WebCore/dom/Element.cpp:2404 > + if (!hasRareData()) > + return;
Ditto.
Antti Koivisto
Comment 7
2013-08-24 04:15:11 PDT
https://trac.webkit.org/r154541
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug